[flake8]
# References:
#   https://flake8.readthedocs.io/en/latest/user/configuration.html
#   https://flake8.readthedocs.io/en/latest/user/error-codes.html
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
#   https://gitlab.com/pycqa/flake8-docstrings
max-line-length = 88
max-complexity = 22
docstring-convention = numpy
select = C,D,E,F,W,B,B950
ignore =
    # E203: whitespace before ':'
    E203,
    # E226: missing whitespace around arithmetic operator
    E226,
    # E231: missing whitespace after ',', ';', or ':'
    E231,
    # E402: module level imports on one line
    E402,
    # E501: line too long
    E501,
    # E731: do not assign a lambda expression, use a def
    E731,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504
exclude =
    .eggs
    _build
    cli.py

[metadata]
author = GeoVista Contributors
author_email = geovista.pub@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science
description = Cartographic rendering and mesh analytics powered by PyVista
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    cartography
    curvilinear
    earth-science
    grid
    mesh
    python
    pyvista
    rectilinear
    ugrid
    unstructured
    vtk
license_files = LICENSE
name = geovista
project_urls =
    Code = https://github.com/bjlittle/geovista
    Discussions = https://github.com/bjlittle/geovista/discussions
    Documentation = https://geovista.readthedocs.io/en/latest
    Issues = https://github.com/bjlittle/geovista/issues
url = https://github.com/bjlittle/geovista
version = attr: geovista.__version__

[options]
include_package_data = True
install_requires =
    cartopy>=0.20
    click
    click-default-group
    netCDF4
    pooch
    pyproj>=3.3
    pyvista==0.37.0
    pyvistaqt
    vtk==9.2.2
package_dir =
    =src
packages = find_namespace:
python_requires =
    >=3.8,<3.11
zip_safe = False 

[options.entry_points]
console_scripts =
    geovista = geovista.cli:main

[options.extras_require]
cmap =
    cmocean
    colorcet
docs =
    sphinx
    sphinx-copybutton
    jupyter-sphinx
    pydata-sphinx-theme
    pythreejs
dev =
    pre-commit
test =
    codecov
    pytest>=6.0
    pytest-cov

[options.packages.find]
where = src
