[metadata]
author = GeoVista Contributors
author_email = geovista.pub@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Atmospheric Science
description = Cartographic rendering and mesh analytics powered by PyVista
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    cartography
    curvilinear
    earth-science
    grid
    mesh
    python
    pyvista
    rectilinear
    ugrid
    unstructured
    vtk
license_files = LICENSE
name = geovista
project_urls =
    Code = https://github.com/bjlittle/geovista
    Discussions = https://github.com/bjlittle/geovista/discussions
    Issues = https://github.com/bjlittle/geovista/issues
url = https://github.com/bjlittle/geovista
version = attr: geovista.__version__

[options]
include_package_data = True
install_requires =
    cartopy>=0.20
    click
    click-default-group
    netCDF4
    pooch
    pyproj>=3.3
    pyvista>=0.38
    vtk
package_dir =
    =src
packages = find_namespace:
python_requires =
    >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    geovista = geovista.cli:main

[options.extras_require]
cmap =
    cmocean
    colorcet
docs =
    sphinx
    sphinx-copybutton
    jupyter-sphinx
    pydata-sphinx-theme
dev =
    pre-commit
test =
    codecov
    pytest>=6.0
    pytest-cov

[options.packages.find]
where = src
